[gd_scene load_steps=3 format=3 uid="uid://dtn38bp02dijs"]

[ext_resource type="Script" path="res://menu.gd" id="1_flick"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hy44"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="menu" type="Node2D"]
script = ExtResource("1_flick")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Navigation" type="Node2D" parent="."]
z_index = 100

[node name="PrivacyButton" type="Button" parent="Navigation"]
offset_left = -570.0
offset_top = -320.0
offset_right = -410.0
offset_bottom = -260.0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_4hy44")
text = "Privacy"

[node name="Privacy2Button" type="Button" parent="Navigation"]
offset_left = -400.0
offset_top = -320.0
offset_right = -240.0
offset_bottom = -260.0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_4hy44")
text = "Privacy 2"

[node name="Privacy3Button" type="Button" parent="Navigation"]
offset_left = -230.0
offset_top = -320.0
offset_right = -70.0
offset_bottom = -260.0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_4hy44")
text = "Privacy 3"

[node name="CreditsButton" type="Button" parent="Navigation"]
offset_left = -60.0
offset_top = -320.0
offset_right = 100.0
offset_bottom = -260.0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_4hy44")
text = "Credits"

[node name="DisclaimerButton" type="Button" parent="Navigation"]
offset_left = 110.0
offset_top = -320.0
offset_right = 270.0
offset_bottom = -260.0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_4hy44")
text = "Disclaimer"

[node name="ContentContainer" type="Node2D" parent="."]
position = Vector2(0, 50)

[connection signal="pressed" from="Navigation/PrivacyButton" to="." method="_on_privacy_button_pressed"]
[connection signal="pressed" from="Navigation/Privacy2Button" to="." method="_on_privacy2_button_pressed"]
[connection signal="pressed" from="Navigation/Privacy3Button" to="." method="_on_privacy3_button_pressed"]
[connection signal="pressed" from="Navigation/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Navigation/DisclaimerButton" to="." method="_on_disclaimer_button_pressed"]
